# PythonInterfaceExample

./: CMakeLists.txt
data/scripts/: SFGE.py  test.py  test2.py
include/engine/: engine.h
include/python/: python_engine.h
src/: main.cpp
src/engine/: engine.cpp
src/python/: python_engine.cpp
